# solc

./: Cargo.toml  Contract.sol  Makefile
compiler/: .gitignore  Cargo.toml  Contract.sol  Contract2.sol  IT.sol  Makefile  TODO.md
compiler/src/: main.rs  mods.rs
compiler/src/mods/constants/: constants.rs
compiler/src/mods/functions/controllers/: process_file_contents.rs  process_function.rs  process_state_variables.rs  process_struct.rs  strip_comments.rs  sub_main.rs
compiler/src/mods/functions/helpers/: helpers.rs
compiler/src/mods/implementations/: conditionals.rs  line_descriptors.rs  mapping.rs
compiler/src/mods/types/: compiler_errors.rs  line_descriptors.rs  token.rs  types.rs
compiler/test/files/enums/: Enum2.sol  Enum3.sol
compiler/test/files/function/: Fn13.sol  Fn19.sol  Fn23.sol  Fn24.sol  Fn25.sol  Fn26.sol  Fn27.sol  Fn28.sol  Fn29.sol  Fn3.sol  Fn30.sol  Fn31.sol  Fn32.sol  Fn33.sol  Fn34.sol  Fn35.sol  Fn36.sol  Fn37.sol  Fn38.sol  Fn39.sol  Fn4.sol  Fn40.sol  Fn41.sol  Fn42.sol  Fn43.sol  Fn44.sol  Fn45.sol  Fn46.sol  Fn47.sol  Fn5.sol  Fn8.sol  mods.rs
compiler/test/files/interface/: I1.sol  I2.sol  I3.sol  I4.sol  I5.sol  I6.sol  I7.sol  I8.sol
compiler/test/files/struct/: Struct.sol  Struct5.sol
compiler/test/files/vars/: Error.sol  Event.sol  Map.sol  Map2.sol  Map3.sol  Map4.sol  Var3.sol  Var4.sol  Var5.sol  Var6.sol
src/: dummy.rs  main.rs  mods.rs
src/mods/constants/: constants.rs
src/mods/implementations/: line_descriptors.rs  mapping.rs
src/mods/types/: types.rs
test/files/function/: Fn10.sol  Fn11.sol  Fn12.sol  (+13 more)
(+15 files in other folders)
