[package]
name = "solc"
version = "0.1.0"
edition = "2021"
authors = ["Victor Samuel <zarah.zrh2@gmail.com>"]
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# opt-level = 3

[dependencies]
eval = "0.4.3"
hex = "0.4"
regex = "1.10.2"
tokio = { version = "1.36.0", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
] }
